Sample usage: Add cat breeds list page.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
+    <include layout="@layout/loading_indicator"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
