--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FF263238</color>
+    <color name="colorPrimaryDark">#232C31</color>
+    <color name="colorAccent">#D32F2F</color>
+    <color name="line_separator_color">#a7d4d3d3</color>
 </resources>
