--- a/app/src/main/res/layout/fragment_cat_lists.xml
+++ b/app/src/main/res/layout/fragment_cat_lists.xml
@@ -5,10 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="viewModel"
-            type="com.cottacush.android.androidbaseprojectkt.sample.catlist.CatsListViewModel" />
+            type="com.cottacush.android.androidbaseprojectkt.sample.catlist.BreedListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,17 +25,16 @@
             android:text="Below are the list of common cat breeds. Click on any of the breeds to view more detailed information about the breed"
             android:textColor="@android:color/black"
             android:textSize="18sp"
-            app:contactAccountsList="@{viewModel.contactsAccountList}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contactSourcesRecyclerView"
+            android:id="@+id/breedsRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
-            app:contactAccountsList="@{viewModel.contactsAccountList}"
+            app:catBreedsList="@{viewModel.catsBreedList}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
