Add spotless gradle plugin to auto-format source files.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.Toolbar
+        app:title=""
         android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
         android:elevation="4dp"
         android:id="@+id/toolbar"
