--- a/app/src/main/res/layout/fragment_cat_lists.xml
+++ b/app/src/main/res/layout/fragment_cat_lists.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:gravity="center"
-            android:text="Below are the list of common cat breeds. Click on any of the breeds to view more detailed information about the breed"
+            android:text="@string/breed_list_info"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
