Add template for advanced sample project

--- a/app/src/main/res/layout/fragment_breeds_list.xml
+++ b/app/src/main/res/layout/fragment_breeds_list.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.cottacush.android.androidbaseprojectkt.sample.catlist.BreedListViewModel" />
+            type="com.cottacush.android.androidbaseprojectkt.sample.basic.catlist.BreedListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
